# EffectiveModernCppBook

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  auto_decl.h  concurrency.h  const_thread.h  deleted.h  enum.h  lambda.h  locks.h  main.cpp  nullptr.h  other.cpp  other.h  other.hpp  override.h  smart_ptr.h  tweaks.h
docker/: Dockerfile
pimpl/: impl.cpp
src/docker/: Dockerfile
src/tutorials/: deleted.h  init.h  main.cpp  move.h  print.h  templates.h
src/tutorials/pimpl/: pimpl.h  tests.h
src/tutorials/subclass_compile/: base.cpp
subclass_compile/: sub.cpp  sub.h
subclass_compile_test/: base.h  library.cpp
